tests/baselines/reference/dynamicImportInDefaultExportExpression.errors.txt
tests/cases/compiler/dynamicImportInDefaultExportExpression.ts(3,23): error TS2307: Cannot find module './foo2'.


==== tests/cases/compiler/dynamicImportInDefaultExportExpression.ts (1 errors) ====
    export default {
        getInstance: function () {
            return import('./foo2');
                          ~~~~~~~~
!!! error TS2307: Cannot find module './foo2'.
        }
    }